[build-system]
requires = [
    "setuptools>=64",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "office"
version = "1.0.0"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Ali Uneri"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3"]
dependencies = [
    "pyqt5",
    "pywin32"]
requires-python = ">=3.8"

[project.optional-dependencies]
ruff = [
    "ruff"]
pyinstaller = [
    "pyinstaller"]

[project.urls]
Homepage = "https://auneri.github.io/OfficePie"
Repository = "https://github.com/auneri/OfficePie"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "COM",  # flake8-commas
    "E",  # pycodestyle errors
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    "FURB",  # refurb
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "NPY",  # NumPy-specific rules
    "PD",  # pandas-vet
    "PERF",  # Perflint
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"
